# PolymktSim

./: .gitignore  DCV_PROGRESS.md  PAPER_PLAN.md  README.md  analyze_375.py  analyze_futurex_failure_modes.py  analyze_results.py  calibrate_shrinkage.py  herding_report.py  market_evidence_viz.ipynb  postprocess_shrink.py  recalibrate.py  requirements.txt  run_baseline_bayesian.py  run_baselines.py  run_baselines_extra.py  run_dcv_prototype.py  run_mock_workflow.py  run_workflow.py
MiroFlow/: .gitattributes  .gitignore  README.md  REUSE.toml  pyproject.toml
MiroFlow/.github/: pull_request_template.md
MiroFlow/.github/scripts/: check_pr_title.py
MiroFlow/.github/workflows/: check-pr-title.yml  run-ruff.yml
MiroFlow/config/: __init__.py  agent_quickstart.yaml  agent_quickstart_graph.yaml  agent_quickstart_no_tools.yaml  agent_quickstart_skill.yaml  agent_single-test.yaml  agent_web_demo.yaml  benchmark_browsecomp-en-200_mirothinker_v1.yaml  benchmark_browsecomp-en_mirothinker.yaml  benchmark_browsecomp-zh_mirothinker_v1.yaml  benchmark_browsecomp-zh_mirothinker_v2.yaml  benchmark_browsecomp-zh_mirothinker_v3.yaml  benchmark_frames-test_mirothinker.yaml  benchmark_gaia-validation-165_mirothinker_tool.yaml  benchmark_gaia-validation-165_mirothinker_v1.yaml  benchmark_gaia-validation-text-103_kimi_k25.yaml  benchmark_gaia-validation-text-103_mirothinker_multi-agent.yaml  benchmark_gaia-validation-text-103_mirothinker_v1.yaml  benchmark_gaia-validation-text-103_mirothinker_v2.yaml  benchmark_hle-text-only_mirothinker.yaml  benchmark_hle_mirothinker_v1.yaml  benchmark_webwalkerqa_mirothinker.yaml  benchmark_xbench-ds_mirothinker.yaml
MiroFlow/config/benchmark/: browsecomp-en-200.yaml  browsecomp-en.yaml  browsecomp-zh.yaml  default.yaml  example_dataset.yaml  finsearchcomp.yaml  frames-test.yaml  futurex.yaml  gaia-test.yaml  gaia-validation-165.yaml  gaia-validation-text-only.yaml  gaia-validation.yaml  hle-text-only.yaml  hle.yaml  webwalkerqa.yaml  xbench-ds.yaml
MiroFlow/config/llm/: base_kimi_k25.yaml  base_minimax.yaml  base_mirothinker.yaml  base_openai.yaml
MiroFlow/data/: README.md
MiroFlow/miroflow/: registry.py
MiroFlow/scripts/: run_prepare_benchmark.sh  run_single_task.py  start_web.sh  test_polymktsim_markets_500.py  test_single_task.sh
MiroFlow/web_app/: main.py
(+2474 files in other folders)
